--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <h2 class="heading">About <samp>Me</samp><span class="animate scroll" style="--i:1;"></span></h2>
 
         <div class="about-img">
-            <img src="/imagenes/about.jpg" alt="">
+            <img src="imagenes/about.jpg" alt="">
             <span class="circle-spin"></span>
             <span class="animate scroll" style="--i:2;"></span>
         </div>
